// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` operator info test  works as planned:  creation of cameras  1`] = `
Array [
  Object {
    "_id": "c1bbbbbbbbbbbbbbbbbbbbbb",
    "ip": "localhost:4202/c1",
    "name": "Camera#1",
  },
  Object {
    "_id": "c2bbbbbbbbbbbbbbbbbbbbbb",
    "ip": "localhost:4202/c2",
    "name": "Camera#2",
  },
  Object {
    "_id": "c3bbbbbbbbbbbbbbbbbbbbbb",
    "ip": "localhost:4202/c3",
    "name": "Camera#3",
  },
]
`;

exports[` operator info test  works as planned:  creation of proInjects  1`] = `
Array [
  Object {
    "_id": "b19999999999999999999999",
    "cameras": Array [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb",
    ],
    "name": "pn1",
    "operatorCameraMapping": Array [
      Object {
        "cameras": Array [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb",
        ],
        "operator": "u1",
      },
      Object {
        "cameras": Array [
          "c2bbbbbbbbbbbbbbbbbbbbbb",
        ],
        "operator": "u2",
      },
    ],
    "operators": Array [
      "u1",
      "u2",
    ],
    "shot": 1,
  },
  Object {
    "_id": "b29999999999999999999999",
    "cameras": Array [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
    ],
    "name": "pn2",
    "operatorCameraMapping": Array [
      Object {
        "cameras": Array [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
        ],
        "operator": "u3",
      },
      Object {
        "cameras": Array [
          "c2bbbbbbbbbbbbbbbbbbbbbb",
        ],
        "operator": "u1",
      },
    ],
    "operators": Array [
      "u1",
      "u3",
    ],
    "shot": 8,
  },
  Object {
    "_id": "b39999999999999999999999",
    "cameras": Array [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb",
    ],
    "name": "pn3",
    "operatorCameraMapping": Array [
      Object {
        "cameras": Array [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
        ],
        "operator": "u3",
      },
      Object {
        "cameras": Array [
          "c3bbbbbbbbbbbbbbbbbbbbbb",
        ],
        "operator": "u2",
      },
    ],
    "operators": Array [
      "u2",
      "u3",
    ],
    "shot": 6,
  },
]
`;

exports[` operator info test  works as planned: Before anything 1`] = `
<div
  className="operatorinfo"
>
  {
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operators": [
      "u1",
      "u2"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ]
  },
  "currentCameras": [],
  "filteredList": []
}
</div>
`;

exports[` operator info test  works as planned: Invalid user selected 1`] = `
<div
  className="operatorinfo"
>
  {
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operators": [
      "u1",
      "u2"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ]
  },
  "currentOperator": "blabliblu",
  "currentCameras": [],
  "filteredList": []
}
</div>
`;

exports[` operator info test  works as planned: Removed user selection 1`] = `
<div
  className="operatorinfo"
>
  {
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operators": [
      "u1",
      "u2"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ]
  },
  "currentOperator": "",
  "currentCameras": [],
  "filteredList": []
}
</div>
`;

exports[` operator info test  works as planned: first user selected 1`] = `
<div
  className="operatorinfo"
>
  {
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operators": [
      "u1",
      "u2"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ]
  },
  "currentOperator": "u1",
  "currentCameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "filteredList": []
}
</div>
`;
